--- a/skills.css
+++ b/skills.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&display=swap');
+
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Quicksand', sans-serif;
     background-color: #0a192f;
     margin: 0;
     padding: 0;
@@ -11,7 +13,6 @@ body {
 
 .skills-container {
     text-align: center;
-    
 }
 
 h1 {
@@ -40,7 +41,7 @@ h1 {
 
 .filter-btn.active,
 .filter-btn:hover {
-    background-color: #00bfff;
+    background-color: #0077b6;
 }
 
 .skills-grid {
@@ -48,6 +49,8 @@ h1 {
     grid-template-columns: repeat(7, minmax(100px, 1fr));
     gap: 15px;
     justify-items: center;
+    transition: opacity 0.5s ease;
+    
 }
 
 .skill-card {
@@ -60,8 +63,6 @@ h1 {
     transition: transform 0.3s ease-in-out;
 }
 
-.skill-card backend scrapy
-
 .skill-card img {
     max-width: 80px;
     margin-bottom: 10px;
@@ -72,16 +73,40 @@ h1 {
 }
 
 .skill-card p {
-    font-weight:lighter
+    font-weight: lighter;
     margin: 0;
     font-size: 15px;
 }
 
 .hidden {
-    visibility: hidden;
     opacity: 0;
-    transition: opacity 0.3s ease-in-out;
-    height: 0;
-    padding: 0;
-    margin: 0;
-} 
+    visibility: hidden;
+    transition: visibility 0s, opacity 0.5s ease;
+   
+}
+
+.visible {
+    opacity: 1;
+    visibility: visible;
+    transition: opacity 0.5s ease;
+}
+
+.shift-up {
+    transform: translateY(-310px); /* Adjust this value as needed */
+    transition: transform 0.9s ease-in-out;
+}
+
+
+/* Fade out effect for hidden skill cards */
+.fade-out {
+    opacity: 0;
+    transform: translateY(20px); /* Optional: add slide down effect */
+    transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+}
+
+/* Fade in effect for shown skill cards */
+.fade-in {
+    opacity: 1;
+    transform: translateY(0);
+    transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+}
