--- a/work.css
+++ b/work.css
@@ -5,7 +5,8 @@ body {
     font-family: 'Quicksand', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    background-color: #1d090904;
+    
     color: black;
 }
 
