--- a/skills.css
+++ b/skills.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: 'Quicksand', sans-serif;
-    background-color: #0a192f;
+    background-color: #edf2f8;
     margin: 0;
     padding: 0;
     display: flex;
@@ -18,11 +18,11 @@ body {
 h1 {
     font-size: 2.5rem;
     margin-bottom: 20px;
-    color: #ccd6f6;
+    color: black;
 }
 
 .highlight {
-    color: #00bfff;
+    color: #4ad42f;
 }
 
 .filters {
@@ -33,7 +33,7 @@ h1 {
     padding: 10px 20px;
     border: none;
     margin: 0 5px;
-    background-color: #00bfff;
+    background-color: #4ad42f;
     color: white;
     cursor: pointer;
     border-radius: 5px;
@@ -41,7 +41,7 @@ h1 {
 
 .filter-btn.active,
 .filter-btn:hover {
-    background-color: #0077b6;
+    background-color: #1d7f09cc;
 }
 
 .skills-grid {
