--- a/contact.css
+++ b/contact.css
@@ -26,20 +26,20 @@ body, html {
     justify-content: space-between;
     
     
+    
 }
 
 .contact-image {
     max-width: 200%;
     height: auto;
-    margin-right: 800px; 
+    margin-right: 1000px; 
 }
 
 .container {
-    max-width: 400px;
-    width: 200%;
+    width: 600px;
     padding: 35px;
     padding-left: 20px;
-    margin-left: -300px;
+    margin-left: -400px;
     background-color: transparent;
     border-radius: 20px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
@@ -61,47 +61,13 @@ h1 {
 
 .highlight {
     color: #2cb311fc; 
+  
+
 }
 .And {
     margin-left:100px;
 }
 
-
-/* .social-buttons {
-    display: flex;
-    justify-content: center;
-    gap: 15px;
-    margin-bottom: 20px;
-}
-
-.social-buttons .btn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 15px;
-    color: white;
-    border-radius: 30px;
-    text-decoration: none;
-    font-size: 1rem;
-    box-shadow: 8px 8px 16px #d1d1d4, -8px -8px 16px #ffffff;
-    transition: box-shadow 0.3s ease;
-} */
-
-/* .linkedin {
-    background-color: #0077b5;
-}
-
-.github {
-    background-color: #333;
-}
-
-.gmail {
-    background-color: #d93025;
-}
-
-.social-buttons .btn:hover {
-    box-shadow: 5px 5px 10px #b0b0b3, -5px -5px 10px #ffffff;
-} */
 
 .contact-form {
     display: flex;
@@ -119,7 +85,7 @@ h1 {
     outline: none;
     background: #f0f0f3;
     box-shadow: inset 8px 8px 16px #d1d1d4, inset -8px -8px 16px #ffffff;
-    font-size: rem;
+    font-size: 1rem;
     color: black;
     font-family: 'Quicksand', sans-serif;
 }
@@ -137,8 +103,11 @@ h1 {
     border: none;
     border-radius: 30px;
     cursor: pointer;
-    font-size: 1.1rem;
+    font-size: 1.5rem;
     transition: background-color 0.3s ease, box-shadow 0.3s ease;
+    font-family: 'Quicksand', sans-serif;
+    font-weight: bold;
+    
 }
 
 .send-btn:hover {
