--- a/skills.css
+++ b/skills.css
@@ -20,9 +20,7 @@ h1 {
     color: black;
 }
 
-.skillname {
-    font-weight: bold;
-}
+
 
 .highlight {
     color: #4ad42f;
@@ -35,10 +33,12 @@ h1 {
 
 .filters {
     margin-bottom: 40px;
+    
 }
 
 .filter-btn {
     padding: 10px 20px;
+    font-family: 'Quicksand', sans-serif;
     border: black solid 1px;
     margin: 0 5px;
     background-color: transparent;
@@ -69,20 +69,35 @@ h1 {
     padding: 15px;
     width: 140px;
     text-align: center;
-    transition: transform 0.3s ease-in-out;
+    transform: translateY(0);
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
 
 .skill-card img {
     max-width: 80px;
     margin-bottom: 10px;
+    
 }
 
-.skill-card:hover {
-    transform: translateY(-10px);
+.skill-card.shift-up:hover {
+    transform: translateY(calc(-310px - 10px)) translateX(-365px) scale(1.05);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+    
+}
+
+.skill-card.shift-up {
+    transform: translateY(-310px) translateX(-365px); 
+    transition: transform 0.9s ease-in-out;
+}
+
+.skill-card:not(.shift-up):hover {
+    transform: translateY(-10px) scale(1.05);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
 
 .skill-card p {
-    font-weight: lighter;
+    font-weight: bold;
     margin: 0;
     font-size: 15px;
 }
@@ -99,11 +114,6 @@ h1 {
     transition: opacity 0.5s ease;
 }
 
-.shift-up {
-    transform: translateY(-310px) translateX(-365px); /* Adjusted to shift both up and left */
-    transition: transform 0.9s ease-in-out;
-}
 
-.skill-card {
-    transition: transform 0.9s ease-in-out; 
-}
+
+
