--- a/Landing.css
+++ b/Landing.css
@@ -62,7 +62,8 @@ nav {
 .navbar li a:hover,
 .navbar li a.active {
     color: black;
-    border-bottom: 2px solid #65e668;
+    border-bottom: 2px solid #2cb311fc;
+    
 }
 
 .btn-download {
@@ -78,6 +79,7 @@ nav {
 .btn-download:hover {
     background-color: #4ad42f;
     color: #edf2f8;
+    
 }
 
 
@@ -140,12 +142,6 @@ nav {
 .btn-primary:hover {
     background-color: #4ad42f;
     color: #edf2f8;
-}
-
-footer {
-    background-color: #0a192f;
-    padding: 20px 0;
-    text-align: center;
 }
 
 .social-icons{
