--- a/about.css
+++ b/about.css
@@ -5,90 +5,110 @@ body {
     background: #edf2f8;
     margin: 0;
     padding: 0;
+}
+
+.about-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+}
+
+.about-container h2 {
+    color: black;
+    font-weight: bold;
+    font-size: 45px;
+    margin-top: 150px;
+}
+
+.buttons {
     display: flex;
     justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    overflow: hidden;
-}
-
-
-.wrapper {
-    display: flex;
-    align-items: flex-start;
-    gap: 20px; 
-}
-
-.image-container {
-    position: relative;
-    display: inline-block; 
-}
-
-.image-container img {
-    max-width: 500px;
-    height: auto;
-    margin-left: -500px;
-    
-}
-
-/* Content container styling */
-.container {
-    width: 800px;
-    margin-top: 10px;
-}
-
-h1 {
-    font-size: 2.8em;
     margin-bottom: 20px;
-    color: #2cb311fc;
-    letter-spacing: 3px;
-    text-align: center;
-    animation: textGradient 3s ease-in-out infinite;
-    background: linear-gradient(to right, #2cb311fc, #2cb311fc);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    z-index: 2; /* Keep buttons above other content */
 }
 
-.intro {
-    font-size: 1.3em;
-    line-height: 1.8;
+button {
+    padding: 10px 20px;
+    font-family: 'Quicksand', sans-serif;
+    border: black solid 1px;
+    background-color: transparent;
+    font-weight: bold;
     color: black;
-    margin-bottom: 30px;
-    text-align: justify;
+    cursor: pointer;
+    border-radius: 5px;
+    font-size: 20px;
+    margin: 0 10px;
 }
 
-.core-competencies h2 {
-    font-size: 2.2em;
-    margin-bottom: 20px;
-    margin-top: 80px;
-    color: #2cb311fc;
-    text-align: center;
-}
-
-ul {
-    list-style: none;
-    padding-left: 100px;
-    margin-left: -500px;
-    width: 1700px;
+button.active,
+button:hover {
+    background-color: #2cb311fc;
     color: black;
 }
 
-ul li {
-    margin-bottom: 15px;
+.about-content {
     position: relative;
-    padding-left: 25px;
-    font-size: 1.3em;
-    
+    width: 80%;
+    max-width: 1000px;
+    margin-top: 20px;
 }
 
-ul li::before {
-    content: '';
+.about-image {
+    position: absolute;
+    margin-top: -120px;
+    margin-left: -30px;
+    top: 20px; 
+    left: 0;
+    width: 50%; 
+    z-index: 1; 
+}
+
+.about-image img {
+    width: 100%;
+    filter: drop-shadow(0px 0px 12px gray);
+}
+
+.content-section {
+    position: relative;
+    margin-left: 45%;
+    font-size: 18px;
+    color: black;
+    line-height: 1.6;
+    text-align: left;
+}
+
+.content {
+    display: none;
+    width: 100%;
+}
+
+.content.active {
+    display: block;
+}
+
+.content ul {
+    list-style-type: none;
+    padding-left: 0;
+}
+
+.content ul li {
+    margin-bottom: 10px;
+    position: relative;
+    padding-left: 20px;
+}
+
+.content ul li::before {
+    content: '•';
+    color: #2cb311fc;
+    font-size: 1.2em;
     position: absolute;
     left: 0;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 10px;
-    height: 10px;
-    background-color: #2cb311fc;
-    border-radius: 50%;
+    top: 0;
 }
+
+.ball {
+    position: absolute;
+    border-radius: 100%;
+    opacity: 0.7;
+  }
