--- a/about.css
+++ b/about.css
@@ -18,7 +18,11 @@ body {
     color: black;
     font-weight: bold;
     font-size: 45px;
-    margin-top: 150px;
+    margin-top: 70px;
+}
+
+.core-highlight{
+    color: #4ad42f;
 }
 
 .buttons {
@@ -44,7 +48,7 @@ button {
 button.active,
 button:hover {
     background-color: #2cb311fc;
-    color: black;
+    color: white;
 }
 
 .about-content {
@@ -56,8 +60,8 @@ button:hover {
 
 .about-image {
     position: absolute;
-    margin-top: -120px;
-    margin-left: -30px;
+    margin-top: -50px;
+    margin-left: -150px;
     top: 20px; 
     left: 0;
     width: 50%; 
@@ -66,7 +70,7 @@ button:hover {
 
 .about-image img {
     width: 100%;
-    filter: drop-shadow(0px 0px 12px gray);
+
 }
 
 .content-section {
@@ -107,8 +111,3 @@ button:hover {
     top: 0;
 }
 
-.ball {
-    position: absolute;
-    border-radius: 100%;
-    opacity: 0.7;
-  }
